minigu/parser/src/parser/impls/snapshots/gql_parser__parser__impls__type_element__tests__boolean_type_2.snap
---
source: minigu/parser/src/parser/impls/type_element.rs
expression: parsed
---
- Bool:
    not_null: true
- start: 0
  end: 13
