minigu/parser/src/parser/impls/snapshots/gql_parser__parser__impls__type_element__tests__character_string_type_2.snap
---
source: minigu/parser/src/parser/impls/type_element.rs
expression: parsed
---
- Char:
    length:
      - kind: Decimal
        integer: "10"
      - start: 6
        end: 8
    not_null: true
- start: 0
  end: 18
