minigu/parser/src/parser/impls/snapshots/gql_parser__parser__impls__type_element__tests__character_string_type_3.snap
---
source: minigu/parser/src/parser/impls/type_element.rs
expression: parsed
---
- Varchar:
    max_length: ~
    not_null: false
- start: 0
  end: 7
