minigu/parser/src/parser/impls/snapshots/gql_parser__parser__impls__type_element__tests__exact_numeric_type_2.snap
---
source: minigu/parser/src/parser/impls/type_element.rs
expression: parsed
---
- SignedNumeric:
    kind:
      - Int32
      - start: 0
        end: 16
    not_null: false
- start: 0
  end: 16
