minigu/parser/src/parser/impls/snapshots/gql_parser__parser__impls__type_element__tests__exact_numeric_type_5.snap
---
source: minigu/parser/src/parser/impls/type_element.rs
expression: parsed
---
- Decimal:
    precision:
      - kind: Decimal
        integer: "5"
      - start: 8
        end: 9
    scale:
      - kind: Decimal
        integer: "2"
      - start: 10
        end: 11
    not_null: false
- start: 0
  end: 12
