minigu/parser/src/parser/impls/snapshots/gql_parser__parser__impls__type_element__tests__immaterial_type_3.snap
---
source: minigu/parser/src/parser/impls/type_element.rs
expression: parsed
---
- Empty
- start: 0
  end: 13
