minigu/parser/src/parser/impls/snapshots/gql_parser__parser__impls__type_element__tests__property_types_specification_1.snap
---
source: minigu/parser/src/parser/impls/type_element.rs
expression: parsed
---
- - name:
      - id
      - start: 2
        end: 4
    value_type:
      - SignedNumeric:
          kind:
            - Int: ~
            - start: 6
              end: 9
          not_null: false
      - start: 6
        end: 9
  - start: 2
    end: 9
- - name:
      - name
      - start: 11
        end: 15
    value_type:
      - String:
          min_length: ~
          max_length: ~
          not_null: false
      - start: 16
        end: 22
  - start: 11
    end: 22
